--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,7 @@
         "psr-4": {
             "Srtest\\TestLibrary\\": "tests"
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
